testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignmentWithKeywordName(target=es2015).errors.txt
index.js(2,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.


==== index.js (1 errors) ====
    var x = 12;
    module.exports = {
    ~~~~~~~~~~~~~~~~~~
        extends: 'base',
    ~~~~~~~~~~~~~~~~~~~~
        more: {
    ~~~~~~~~~~~
            others: ['strs']
    ~~~~~~~~~~~~~~~~~~~~~~~~
        },
    ~~~~~~
        x
    ~~~~~
    };
    ~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.